k8s/concourse-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: concourse-ingress
  annotations:
    cert-manager.io/issuer: lets-encrypt-real
    #cert-manager.io/issuer: lets-encrypt-test
    #nginx.ingress.kubernetes.io/secure-backends: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - concourse.jasonmorsley.io
    secretName: tls-concourse-ingress
  rules:
  - host: concourse.jasonmorsley.io
    http:
      paths:
      - backend:
          serviceName: concourse-web
          servicePort: 8080
        #path: /
